# lenta_price_vision

./: .dockerignore  .env.example  .gitattributes  .gitignore  Makefile  README.md  api_gateway.py  docker-compose.yml  how_to_yolo.md  justfile  main.py  ml_readme.md  ml_server.py  mock_api_backend.py  pyproject.toml  test_qwen3vl.py  test_qwen_cli.py  yolo1-train.sh
.github/workflows/: ci.yml
.run/: start_backend.ps1
api/: config.py  logging_setup.py  ml_app.py  pipeline_bridge.py  run_store.py
api/routers/: download.py  meta.py  predict.py
data/: .gitignore
data/configs/: yolo1data.yml
experiments/: 25_12-20_qr_benchmark.csv  43_15_qr_benchmark.csv  adnet_test.py  barcode_test.py  bbox_inspector.py  esrgan_inspector.py  everything.py  explore.py  extract_frames.sh  ocr_esrgan.py  ocr_test.py  pyproject.toml  qr_battle.py  qr_benchmark.py  qr_esrgan.py  qr_temporal.py
experiments/materials/: Расшифровка ценники.pptx
experiments/pipeline/: ocr.py  qr.py  sr.py  video.py
experiments/src/experiments/: main.py
experiments/Данные/25_12-20/: 25_12-20.csv
experiments/Данные/26_12-20/: 26_12-20.csv
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx  styles.css
infra/compose/: docker-compose.ci.yml  docker-compose.demo.yml  docker-compose.dev.yml
infra/docker/: backend.Dockerfile  frontend.Dockerfile  ml.Dockerfile  mock-store-api.Dockerfile
ml/: training.py
models/: README.md
notebooks/: barcode_recovery.ipynb
pipeline/: detector.py  fragments.py  ocr.py  parsers.py  qr.py  quality.py  sr.py  video.py  vlm.py
prompts/: qwen_extract.md
runs/datasets/price_tag_dataset_1/: data.yaml
scripts/: build_dataset.py  crop_detections.py  dedupe_predictions.py  infer_video.py  prepare_cvat_dataset.py  preview_dataset.py  pseudo_label_stage1.py  pseudo_label_stage2.py  review_dataset.py  review_yolo_49_43_26.ps1  smoke_test.sh  train_yolo_49_43_26_best.ps1
train/: train_yolo1.sh  train_yolo2.sh
