[project]
name = "price-tag-audit"
version = "0.1.0"
description = "Retail price tag recognition and shelf audit system"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "packages/backend",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pre-commit>=4.0.0",
    "mypy>=1.13.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM"
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = [
    "packages/backend/tests",
    "tests"
]
asyncio_mode = "auto"
pythonpath = [
    "packages/backend/src",
]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
