[project]
name = "price-tag-audit"
version = "0.1.0"
description = "Retail price tag recognition and shelf audit system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lap>=0.5.13",
]

[tool.uv]
override-dependencies = [
    "opencv-python; python_version < '3'",
    "opencv-python-headless; python_version < '3'",
]

[tool.uv.workspace]
members = [
    "packages/backend",
    "packages/frontend",
    "packages/mock_store_api",
    "experiments"
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pre-commit>=4.0.0",
    "mypy>=1.13.0",
    "gradio>=6.14.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM"
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = [
    "packages/backend/tests",
    "packages/frontend/tests",
    "packages/mock_store_api/tests",
    "tests"
]
asyncio_mode = "auto"
pythonpath = [
    "packages/backend/src",
    "packages/frontend/src",
    "packages/mock_store_api/src",
    "experiments"
]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
