[project]
name = "sol-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "numpy>=2.2.6",
    "opencv-contrib-python>=4.13.0.92",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "qwen-vl-utils>=0.0.14",
    "requests>=2.34.2",
    "torch",
    "torchvision",
    "transformers>=4.52.0",
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cu132"},
]
torchvision = [
  { index = "pytorch-cu132"},
]


[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true

[dependency-groups]
dev = [
    "rich>=15.0.0",
    "typer>=0.25.1",
]
